--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2167,7 +2167,7 @@ a, a:visited {
 				-webkit-transition: color 0.25s ease-in-out, border-bottom-color 0.25s ease-in-out;
 				-ms-transition: color 0.25s ease-in-out, border-bottom-color 0.25s ease-in-out;
 				transition: color 0.25s ease-in-out, border-bottom-color 0.25s ease-in-out;
-				color:;
+				color: #ed786a;
 			}
 
 /* Features */
