--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2114,6 +2114,7 @@ html {
 
 		#header p {
 			text-transform:;
+			font-family: 'Arvo';
 			font-weight: 900;
 			color: #1D1D1F;
 			margin: 2.5em 0 0 0;
