--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2100,11 +2100,11 @@ html {
 		}
 
 		#header h1 {
-			font-family: 'Garamond';			
+			font-family: 'Arvo';			
 			font-weight: 900;
 			color: #1D1D1F;
 			text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.1);
-			font-size: 4em;
+			font-size: 3em;
 			letter-spacing: 13px;
 		}
 
@@ -2114,8 +2114,8 @@ html {
 
 		#header p {
 			text-transform:;
-			font-family: 'Garamond';			
-			font-weight: 700;
+			font-family: 'Arvo';			
+			font-weight: 400;
 			color: #1D1D1F;
 			margin: 2.5em 0 0 0;
 			font-size: 1.5em;
