--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2114,7 +2114,7 @@ html {
 
 		#header p {
 			text-transform:;
-		font-family: 'Neo Sans';			
+			font-family: 'Steak';			
 			font-weight: 700;
 			color: #1D1D1F;
 			margin: 2.5em 0 0 0;
