--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2102,7 +2102,7 @@ html {
 		#header h1 {
 			font-family: 'Arvo';			
 			font-weight: 900;
-			color: #CFC29B;
+			color: #1D1D1F;
 			text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.1);
 			font-size: 3em;
 			letter-spacing: 13px;
