--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2100,7 +2100,7 @@ html {
 		}
 
 		#header h1 {
-			font-family: 'Arvo';			
+			font-family: font-family: SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;			
 			font-weight: 900;
 			color: #1D1D1F;
 			text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.1);
