--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2100,7 +2100,7 @@ html {
 		}
 
 		#header h1 {
-			font-family: font-family: SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;			
+			font-family: 'Arvo';			
 			font-weight: 900;
 			color: #1D1D1F;
 			text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.1);
@@ -2114,7 +2114,6 @@ html {
 
 		#header p {
 			text-transform:;
-			font-family: SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
 			font-weight: 400;
 			color: #1D1D1F;
 			margin: 2.5em 0 0 0;
