--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2114,7 +2114,8 @@ html {
 
 		#header p {
 			text-transform:;
-			font-weight: 400;
+			font-family: SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+			font-weight: 600;
 			color: #1D1D1F;
 			margin: 2.5em 0 0 0;
 			font-size: 1.50em;
